// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "network.proto";
option java_outer_classname = "DdbProto";
option objc_class_prefix = "HLW";

message TableRequest{
    optional string tempTableName = 1;
}

message TableResponse{
    optional string attributeMeta = 1;
    repeated string attributeValues = 2;
}

message SaveTableRequest{
    optional string tableName = 1;
    optional string attributeMeta = 2;
    repeated string attributeValues = 3;
}

message SaveTableResponse{
    optional bool success = 1;
}

message DeleteTempTableRequest{
    optional string tempTableName = 1;
}

message DeleteTempTableResponse{
    optional bool success = 1;
}

message ExecuteNonQueryRequest{
    optional string sql = 1;
}

message ExecuteNonQueryResponse{
    optional bool success = 1;
}

message ExecuteQueryRequest{
    optional string sql = 1;
}

message ExecuteQueryResponse{
    optional string attributeMeta = 1;
    repeated string attributeValues = 2;
}

service DdbService{
    rpc RequestTable(TableRequest) returns (TableResponse);

    rpc SaveTable(SaveTableRequest) returns (SaveTableResponse);

    rpc DeleteTable(DeleteTempTableRequest) returns (DeleteTempTableResponse);

    rpc ExecuteNonQuery(ExecuteNonQueryRequest) returns (ExecuteNonQueryResponse);

    rpc ExecuteQuery(ExecuteQueryRequest) returns (ExecuteQueryResponse);
}